--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -39,16 +39,18 @@
                     <button type="submit"><i class="fab fa-facebook"></i></button>
                 </div>
             </div>
-            <form action="">
+            <form method="POST">
                 <article>
                     <div class="login_form-box">
                         <label for="user">Usuario</label>
-                        <input class="login_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario">
+                        <input class="login_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario" value="<%= locals.old && old.user ? old.user : ''%>">
+                        <span class="errors"><%= locals.errors && errors.user ? errors.user.msg : null%> </span>
                     </div>
                     <div class="login_form-box">
                         <label for="password">Contraseña</label>
                         <input class="login_form-input" type="password" id="password" name="password"
                             placeholder="Ingresa tu contraseña">
+                        <span class="errors"><%= locals.errors && errors.password ? errors.password.msg : null%> </span>
                     </div>
                 </article>
                 <div class="login_center">
