--- a/site_ViveBio/src/views/users/register.ejs
+++ b/site_ViveBio/src/views/users/register.ejs
@@ -22,40 +22,46 @@
                     </div>
                 </div>
                 <h1>Registro</h1>
-                <form action="">
+                <form method="POST" action="">
                     <article class="sub-container">
                         <div class="sub-container1">
                             <div class="register_form-box">
                                 <label for="email">Nombre</label>
                                 <input class="register_form-input" type="text" id="firstName" name="firstName"
-                                    placeholder="Ingresa tu nombre">
+                                    placeholder="Ingresa tu nombre" value="<%= locals.old && old.firstName ? old.firstName : ''%> ">
+                                <span class="errors"><%= locals.errors && errors.firstNamename ? errors.firstName.msg : null%>  </span>
                             </div>
                             <div class="register_form-box">
                                 <label for="email">Apellido</label>
                                 <input class="register_form-input" type="text" id="lastName" name="lastName"
-                                    placeholder="Ingresa tu apellido">
+                                    placeholder="Ingresa tu apellido" value="<%= locals.old && old.lastName ? old.lastName : ''%> ">
+                                <span class="errors"><%= locals.errors && errors.lastName ? errors.lastName.msg : null%>  </span>
                             </div>
                             <div class="register_form-box">
                                 <label for="email">E-mail</label>
                                 <input class="register_form-input" type="email" id="email" name="email"
-                                    placeholder="Ingresa tu email">
+                                    placeholder="Ingresa tu email" value="<%= locals.old && old.email ? old.email : ''%>">
+                                <span class="errors"><%= locals.errors && errors.email ? errors.email.msg : null%>  </span>
                             </div>
                             <div class="register_form-box">
                                 <label for="user">Usuario</label>
                                 <input class="register_form-input" type="user" id="user" name="user"
-                                    placeholder="Ingresa usuario">
+                                    placeholder="Ingresa usuario" value="<%= locals.old && old.user ? old.user : ''%>">
+                                <span class="errors"><%= locals.errors && errors.user ? errors.user.msg : null%> </span>
                             </div>
                         </div>
                         <div class="sub-container2">
                             <div class="register_form-box">
                                 <label for="password">Contraseña</label>
                                 <input class="register_form-input" type="password" id="password" name="password"
-                                    placeholder="Ingresa tu contraseña">
+                                    placeholder="Ingresa tu contraseña" title="Entre cinco y ocho caracteres">
+                                <span class="errors"><%= locals.errors && errors.password ? errors.password.msg : null%> </span>
                             </div>
                             <div class="register_form-box">
                                 <label for="password2">Repite tu contraseña</label>
                                 <input class="register_form-input" type="password" id="password2" name="password2"
                                     placeholder="Ingresa tu contraseña">
+                                <span class="errors"><%= locals.errors && errors.password2 ? errors.password2.msg : null%> </span>
                             </div>
                             <div class="register_form-box">
                                 <label for="image">Imagen de perfil</label>
@@ -69,6 +75,7 @@
                         <div class="register_terminos">
                             <input class="" type="checkbox" name="terminos" id="terminos">
                             <label for="terminos" style="font-size: 12px;">Acepto términos y condiciones</label>
+                            <span class="errors"><%= locals.errors && errors.terminos ? errors.terminos.msg : null%> </span>
                         </div>
                         <div class="register_button">
                             <button type="submit">Enviar</button>
