sprint 5 without admin

--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -54,6 +54,10 @@
                     </div>
                 </article>
                 <div class="login_center">
+                        <div class="register_terminos">
+                            <input class="" type="checkbox" name="recordar" id="recordar">
+                            <label for="recordar" style="font-size: 12px;">Recordar</label>
+                        </div>
                     <div class="login_button">
                         <button type="submit">Enviar</button>
                     </div>
