--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -42,68 +42,40 @@
                                 <button type="submit"><i class="fab fa-facebook"></i></button>
                             </div>
                         </div>
-                        <form action="">
+                        <form method="POST">
                             <article>
                                 <div class="login_form-box">
                                     <label for="user">Usuario</label>
                                     <input class="login_form-input" type="user" id="user" name="user"
-                                        placeholder="Ingresa usuario">
+                                        placeholder="Ingresa usuario"
+                                        value="<%= locals.old && old.user ? old.user : ''%>">
+                                    <span class="errors">
+                                        <%= locals.errors && errors.user ? errors.user.msg : null%>
+                                    </span>
                                 </div>
                                 <div class="login_form-box">
                                     <label for="password">Contraseña</label>
                                     <input class="login_form-input" type="password" id="password" name="password"
-                                        placeholder="Ingresa tu contraseña" required>
+                                        placeholder="Ingresa tu contraseña">
+                                    <span class="errors">
+                                        <%= locals.errors && errors.password ? errors.password.msg : null%>
+                                    </span>
                                 </div>
                             </article>
-                            <div class="login_remember-box">
-                                <input  type="checkbox" name="remember" style="margin-right: 10px;">
-                                <label for="remember" name="remember">Recordar usuario</label>
+                            <div class="login_center">
+                                <div class="register_terminos">
+                                    <input class="" type="checkbox" name="recordar" id="recordar">
+                                    <label for="recordar" style="font-size: 12px;">Recordar</label>
+                                </div>
+                                <div class="login_button">
+                                    <button type="submit">Enviar</button>
+                                </div>
                             </div>
-
-                            <div class="login_button">
-                                <button type="submit">Enviar</button>
-                            </div>
-
                         </form>
+
                     </section>
-                </div>
-            </div>
-            <h1>Login</h1>
-            <div class="login_box-gf">
-                <div class="login_google">
-                    <button type="submit"><i class="fab fa-google-plus"></i></button>
-                </div>
-                <div class="login_facebook">
-                    <button type="submit"><i class="fab fa-facebook"></i></button>
-                </div>
-            </div>
-            <form method="POST">
-                <article>
-                    <div class="login_form-box">
-                        <label for="user">Usuario</label>
-                        <input class="login_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario" value="<%= locals.old && old.user ? old.user : ''%>">
-                        <span class="errors"><%= locals.errors && errors.user ? errors.user.msg : null%> </span>
-                    </div>
-                    <div class="login_form-box">
-                        <label for="password">Contraseña</label>
-                        <input class="login_form-input" type="password" id="password" name="password"
-                            placeholder="Ingresa tu contraseña">
-                        <span class="errors"><%= locals.errors && errors.password ? errors.password.msg : null%> </span>
-                    </div>
-                </article>
-                <div class="login_center">
-                        <div class="register_terminos">
-                            <input class="" type="checkbox" name="recordar" id="recordar">
-                            <label for="recordar" style="font-size: 12px;">Recordar</label>
-                        </div>
-                    <div class="login_button">
-                        <button type="submit">Enviar</button>
-                    </div>
-                </div>
-            </form>
-        </section>
-    </main>
-    <script src="/javascript/menuMobile.js"></script>
-</body>
+        </main>
+        <script src="/javascript/menuMobile.js"></script>
+    </body>
 
 </html>
