--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -47,10 +47,14 @@
                     <h6>Peso: <%= product.volume %> grs.</h6>
                   </div>
                   <div class="producto-iconos">
-                    <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
-                      <button type="submit"><i class="fa-solid fa-trash-can"></i></button>
-                    </form>
-                    <a href="/products/Edit/<%= product.id %> "><i class="fa-solid fa-pen"></i></a>
+                    <% if (locals.userLogin) { %>
+                      <% if (userLogin.category === "admin") { %>
+                        <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
+                          <button type="submit"><i class="fa-solid fa-trash-can"></i></button>
+                        </form>
+                          <a href="/products/Edit/<%= product.id%> "><i class="fa-solid fa-pen"></i></a>
+                      <% } %>
+                    <% } %>
                     <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                     <a href="#"><i class="fa-solid fa-star"></i></a>
                     <a href=""><i class="fa-solid fa-share-nodes"></i></a>
