vista de perfil

--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -12,4 +12,5 @@
 @import './productAll.css';
 @import './addProducts.css';
 @import './editProducts.css';
+@import './profile.css';
 @import './error.css';
