--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -6,11 +6,7 @@
   <body class="productCard">
     <%- include('../partials/header') %>
       <main>
-        <section class="producto">
           <div class="producto__texto">
-            <h1>
-              <%= product.name %>
-            </h1>
             <div class="container-imagen-texto">
               <div class="producto__imagen">
                 <div class="box-imagen">
@@ -20,18 +16,20 @@
                   <h5>-<%= product.property %>-</h5>
                   <div class="box-info-precio">
                     <h2> 
-                    <span> 💲 </span> <% if (product.discount) { %>
+                    <span> $  </span> <% if (product.discount) { %>
                         <%= product.price - (product.price * product.discount / 100) %> 
                     <% }else{ %>
-                        <%= product.price %>
+                        <%= toThousand(product.price) %>
                     <% } %> 
                     </h2>
-                    <span class="rating">⭐⭐⭐⭐</span>
                   </div>
                 </div>
               </div>
               <div class="box-texto-iconos">
                 <p>
+                  <h1>
+                    <%= product.name %>
+                  </h1>
                   <%= product.description %>
                     <br> SUMATE AL CAMBIO💚
                 </p>
@@ -39,7 +37,7 @@
                   <div class="info-precio">
                     <h4>Precio pago en efectivo: $
                       <% if (product.discount) { %>
-                      <%= product.price - (product.price * product.discount / 100) %> 
+                      <%= toThousand(product.price - (product.price * product.discount / 100)) %> 
                   <% }else{ %>
                       <%= product.price %>
                   <% } %> .-</h4>
@@ -49,15 +47,15 @@
                   <div class="producto-iconos">
                     <% if (locals.userLogin) { %>
                       <% if (userLogin.category === "admin") { %>
-                        <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
-                          <button type="submit"><i class="fa-solid fa-trash-can"></i></button>
+                        <form action="/products/remove/<%= product.id %>?_method=DELETE" method="POST">
+                          <button type="submit" title="Eliminar producto"><i class="fa-solid fa-trash-can"></i></button>
                         </form>
-                          <a href="/products/Edit/<%= product.id%> "><i class="fa-solid fa-pen"></i></a>
+                          <a href="/products/Edit/<%= product.id%> " title="Editar producto"><i class="fa-solid fa-pen"></i></a>
                       <% } %>
                     <% } %>
-                    <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <a href="#"><i class="fa-solid fa-star"></i></a>
-                    <a href=""><i class="fa-solid fa-share-nodes"></i></a>
+                    <a href="/productCarrito.html" title="Agregar producto al carrito"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="#" title="Añadir a favoritos"><i class="fa-solid fa-star"></i></a>
+                    <a href="#" title="Compartir enlace"><i class="fa-solid fa-share-nodes"></i></a>
                   </div>
                 </div>
               </div>
@@ -81,20 +79,23 @@
                             <%= name %>
                           </h2>
                         </a>
-                        <h6 class="rating">⭐⭐⭐⭐</h6>
                         <span>-<%= property %> -</span> 
                         <p>$
                         <% if (product.discount) { %>
-                          <%= product.price - (product.price * product.discount / 100) %> 
+                          <%= toThousand(product.price - (product.price * product.discount / 100)) %> 
                       <% }else{ %>
-                          <%= product.price %>
+                          <%= toThousand(product.price) %>
                       <% } %> 
                       </p>
                       </div>
                       <div class="card-c-iconos">
                         <div class="iconos-white">
-                          <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
-                          <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
+                          <% if (locals.userLogin) { %>
+                            <% if (userLogin.category === "admin") { %>
+                            <a href="/products/Card/<%= id %> " title="Ver producto"><i class="fa-solid fa-eye"></i></a>
+                            <a href="/products/Edit/<%= id %> " title="Editar producto"><i class="fa-solid fa-pen"></i></a>
+                          <% } %>
+                          <% } %>
                           <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                           <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                           <a href="#"><i class="fa-solid fa-star"></i></a>
