--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -12,5 +12,6 @@
 @import './productAll.css';
 @import './addProducts.css';
 @import './editProducts.css';
-@import './profile.css';
+@import './user.css';
 @import './error.css';
+@import'./editProfile.css';
