--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -75,7 +75,7 @@
                                     </p>
                                 </div>
                                 <div class="verart__home">
-                                    <a href="/Products/Card/<%= product.id %>">Ver mas</a>
+                                    <a href="/products/Card/<%= product.id %>">Ver mas</a>
                                 </div>
                             </article>
                             <% } %>
