--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -43,11 +43,19 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye" title="Ver producto"></i></a>
-                                                <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen" title="Editar producto"></i></a>
-                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
-                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                                                <% if (locals.userLogin) { %>
+                                                    <% if (userLogin.category==="admin" ) { %>
+                                                        <a href="/products/Edit/<%= id %> " title="Editar producto"><i
+                                                                class="fa-solid fa-pen"></i></a>
+                                                        <% } %>
+                                                            <% } %>
+                                                                <a href="/products/Card/<%= id %>"><i
+                                                                        class="fa-solid fa-eye"
+                                                                        title="Ver producto"></i></a>
+                                                                <a href="/productCarrito.html" class="add-cart">Quiero!
+                                                                    🛒</a>
+                                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                                                <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
 
                                         </div>
@@ -92,11 +100,19 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye" title="Ver producto"></i></a>
-                                                <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen" title="Editar producto"></i></a>
-                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
-                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                                                <% if (locals.userLogin) { %>
+                                                    <% if (userLogin.category==="admin" ) { %>
+                                                        <a href="/products/Edit/<%= id %> " title="Editar producto"><i
+                                                                class="fa-solid fa-pen"></i></a>
+                                                        <% } %>
+                                                            <% } %>
+                                                                <a href="/products/Card/<%= id %>"><i
+                                                                        class="fa-solid fa-eye"
+                                                                        title="Ver producto"></i></a>
+                                                                <a href="/productCarrito.html" class="add-cart">Quiero!
+                                                                    🛒</a>
+                                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                                                <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
 
                                         </div>
@@ -141,11 +157,19 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye" title="Ver producto"></i></a>
-                                                <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen" title="Editar producto"></i></a>
-                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
-                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                                                <% if (locals.userLogin) { %>
+                                                    <% if (userLogin.category==="admin" ) { %>
+                                                        <a href="/products/Edit/<%= id %> " title="Editar producto"><i
+                                                                class="fa-solid fa-pen"></i></a>
+                                                        <% } %>
+                                                            <% } %>
+                                                                <a href="/products/Card/<%= id %>"><i
+                                                                        class="fa-solid fa-eye"
+                                                                        title="Ver producto"></i></a>
+                                                                <a href="/productCarrito.html" class="add-cart">Quiero!
+                                                                    🛒</a>
+                                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                                                <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
 
                                         </div>
