edit profile Fixed

--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -13,7 +13,7 @@
                             <div class="edit_user__head">
                                 <div class="edit_user__img">
                                     <img src="/images/users/<%= user.image %>" alt="">
-                                    <label for="newImg"><i class="fas fa-pen"></i></label>
+                                    <label for="image"><i class="fas fa-pen"></i></label>
                                     <input type="file" accept="image/*" id="image" name="image">
                                 </div>
                                 <div class="edit_user__names">
