--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -13,4 +13,5 @@
 @import './addProducts.css';
 @import './editProducts.css';
 @import './profile.css';
+@import './list.css';
 @import './error.css';
