--- a/site_ViveBio/src/views/products/list.ejs
+++ b/site_ViveBio/src/views/products/list.ejs
@@ -7,8 +7,30 @@
         <%- include('../partials/header') %>
 
         <main class="list">
-            
-            <div class="list__contenedor">
+            <div class="list__container">
+                <div class="list__top">
+                    <div class="list__cates">
+                        <div class="list__cates1">
+                            <a class="list__cate" href="/products/list/0">todos</a>
+                            <a class="list__cate" href="/products/list/1">BioCapilar</a>
+                        </div>
+                        <div class="list__cates2">
+                            <a class="list__cate" href="/products/list/2">BioCorporal</a>
+                            <a class="list__cate" href="/products/list/3">BioSpa</a>
+                        </div>
+
+                    </div>
+                    <form class="list__busqueda" action="/products/list" method="GET">
+                        <input type="text" name="keyboard" class="list__barra" >
+                        <button  type="submit">buscar</button>
+                    </form>
+                </div>
+                <div class="list__headproducts">
+                    <h3 class="list__id">id</h3>
+                    <h3 class="list__name">nombre</h3>
+                    <h3 class="list__price">precio</h3>
+                    <h3 class="list__options">opciones</h3> 
+                </div>
 
 
             </div>
